# zoomhub

./: .env.example  .gitignore  CLAUDE.md  Dockerfile  docker-compose.yml  fly.toml  nginx.conf  package-lock.json  requirements.txt  setup_telegram.py  start-backend.sh
.github/workflows/: build-agent.yml  build-whisper-worker.yml  deploy.yml  test.yml
ZoomHubApp/: build.sh  create-dmg.sh  project.yml
ZoomHubApp/Resources/: setup.sh
ZoomHubApp/ZoomHubApp.xcodeproj/: project.pbxproj
agent/: ZoomHubAgent.spec  bukvitsa_local.py  install-mac.sh  requirements.txt  web_setup.py  zoomhub_agent.py  zoomhub_agent_v2.py
app/: auth.py  config.py  crypto.py  database.py  deps.py  main.py  models.py  oauth.py
app/routers/: admin.py  auth.py  chat.py  folders.py  meetings.py  native_api.py  telegram_bot.py  zoom.py
app/services/: chat_context.py  chat_engine.py  classifier.py  folder_watcher.py  notify.py  pipeline.py  summarizer.py  transcriber.py  zoom_client.py  zoom_oauth.py  zoom_poller.py  zoom_user_poller.py
app/templates/: admin.html  base.html  chat.html  folder.html  index.html  (+8 more)
docs/: admin-panel.md  ai-chat-mvp.md  ai-chat-roles.md  ai-chat-v2.md  council-2026-04-09-final.md  council-2026-04-09.md  llm-routing.md  onboarding-wizard.md  zoom-auto-capture.md
runpod-worker/: Dockerfile  README.md  handler.py
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: main.rs
tests/: conftest.py  test_agent_dedup.py  test_models.py  test_routes.py  test_summarizer.py  test_transcriber.py
(+39 files in other folders)
